# coherence-mcp

./: .env.example  .eslintrc.json  .gitignore  .npmignore  AI_RULES.md  BRANDING.md  CHAIN_PROMPT_ANALYSIS.md  CHECKPOINT-2026-02-16.md  CLAUDE-INIT.md  CODEOWNERS  CONTRIBUTING.md  CONVERGENCE.md  DEPLOY-MAP.md  DEPLOYMENT.md  FIXED-POINTS.md  GAP_ANALYSIS.md  GEMINI-INIT.md  GEMINI_PROMPT.md  GROK-CONTEXT.md  GROK-INIT.md  HOPE-INSTALL-REPORT.md  LATTICE.md  LICENSE  README.md  ROADMAP.md  SDF_Glass_Path_Tracer_Integration_Resources.md  SECURITY.md  WAVE_GITHUB_ANALYSIS.md  benchmark_results.json  improve.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  registry-submission.yaml  reson8-activator.plugin  reson8-centre.html  reson8-dashboard.html  tmpclaude-17d9-cwd  tsconfig.json  (+10 more)
.context/: agent-orchestration.json  session-state.json  tri-weavon-live-session-2026-02-13.md  vortex-birth-reference.json  vortex-iteration-20.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.well-known/: mcp-server.json  pgp-key.txt
__tests__/: tools.test.ts
coherence-site/: DEPLOY-MAP.md  deploy.sh  vercel.json  wrangler.toml
docs/: ATOM_AUTH.md  CAPABILITY-MAP-v0.4.1.md  CAPABILITY-MAP-v0.4.2.md  CLOUDFLARE_SETUP.md  CSEP_PROTOCOL.md  EULER_PRECISION_IMPACT_ANALYSIS.md  (+22 more)
orchestrator/crates/core/: Cargo.toml
orchestrator/crates/core/src/: adapter.rs  agent.rs  bus.rs  capability.rs  lib.rs  logic.rs  memory.rs  orchestrator.rs  protocol.rs  task.rs
orchestrator/crates/tui/: Cargo.toml
orchestrator/crates/tui/src/: app.rs  main.rs  ui.rs
(+113 files in other folders)
