[package]
name = "orchestrator-tui"
description = "TUI frontend for the Multi-AI Platform Orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
orchestrator-core = { path = "../core" }
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
